--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Big Picture by HTML5 UP</title>
+    <title>Ibekwe Picture</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -20,13 +20,14 @@
   <body class="is-preload">
     <!-- Header -->
     <header id="header">
-      <h1>Big Picture</h1>
+      <h1>Ibekwe Kingsley</h1>
       <nav>
         <ul>
           <li><a href="#intro">Intro</a></li>
           <li><a href="#one">What I Do</a></li>
-          <li><a href="#two">Who I Am</a></li>
-          <li><a href="#work">My Work</a></li>
+          <li><a href="#two">My Skillset</a></li>
+		  <li><a href="#Three">Experience</a></li>
+          <li><a href="#work">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -37,15 +38,14 @@
       <section id="intro" class="main style1 dark fullscreen">
         <div class="content">
           <header>
-            <h2>Hey.</h2>
+            <h2>Hey there, 
+				I'm kingsley</h2>
           </header>
           <p>
-            Welcome to <strong>Big Picture</strong> a responsive site template
-            designed by <a href="https://html5up.net">HTML5 UP</a><br />
-            and released for free under the
-            <a href="https://html5up.net/license"
-              >Creative Commons Attribution license</a
-            >.
+            A knowledge driven Data Scientist, Al/ML Engineer, and Python Developer with appropriate expertise and a strong interest in problem solving using Data Science, Machine Learning, Software Development, Research, and Innovation. 
+			<a href="https://www.linkedin.com/in/ibekwe-kingsley-ba0b0516a/">LinkedIn</a><br />
+            
+
           </p>
           <footer>
             <a href="#one" class="button style2 down">More</a>
@@ -62,11 +62,9 @@
             <h2>What I Do</h2>
           </header>
           <p>
-            Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-            condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-            eu. Sed sodales venenatis arcu, id varius justo euismod in.
-            Curabitur egestas consectetur magna.
-          </p>
+            I am Passionate in using data, machine learning, deep learning, and natural language processing approaches to tackle difficult business challenges.
+I have eveloped good analytical skills and documented expertise solving unstructured challenges.
+
         </div>
         <a href="#two" class="button style2 down anchored">Next</a>
       </section>
@@ -77,30 +75,53 @@
  <section id="two" class="main style2 left dark fullscreen">
       <div class="content box style2">
         <header>
-          <h2>Who I Am</h2>
+          <h2>My Skillset</h2>
         </header>
         <p>
-          Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-          condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-          eu. Sed sodales venenatis arcu, id varius justo euismod in. Curabitur
-          egestas consectetur magna.
-        </p>
+			Skillset Summary 🏋🛠
+			•	Machine Learning, Natural Language Processing, Deep learning
+			•	Language: Python, Html 
+			•	Frameworks: Tensorflow, scikit-learn, FastApi
+			•	Platforms: AWS, BigML, Linux
+			•	Data Scraping, Web Scraping, Sentiment Analysis
+			•	Technical Writing
+			•	Softskills: Team Management, Leadership,  Time management.
+			
+	  </p>
       </div>
-      <a href="#work" class="button style2 down anchored">Next</a>
+      <a href="#Three" class="button style2 down anchored">Next</a>
     </section>
 
-	</div>
+	<!-- Three -->
+	<div id="two-bg">
+		<section id="Three" class="main style2 left dark fullscreen">
+			 <div class="content box style2">
+			   <header>
+				 <h2>Professional Experience</h2>
+			   </header>
+			   <p>
+				 
+•	Intern – EdgeSight Labs August 2022 – Present
+  •  Virtual experience British Airways Ferbuary 2023
+•	AWS Community Builder 2022
+•	Lead Data Scientist Network UNN 2022 – Present
+•	Intern – Hamoye Internship  2020
+
+			 </p>
+			 </div>
+			 <a href="#work" class="button style2 down anchored">Next</a>
+		   </section>
+
+    </div>
    
     <!-- Work -->
     <section id="work" class="main style3 primary">
       <div class="content">
         <header>
-          <h2>My Work</h2>
+          <h2>Projects</h2>
           <p>
-            Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-            condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-            eu. Sed sodales venenatis arcu, id varius justo euismod in.
-            Curabitur egestas consectetur magna vitae.
+           Here is a list of some of the projects I have worked on
+		   you can click on the images to get a full detail about the project.
           </p>
         </header>
 
