--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Ibekwe Picture</title>
+    <title>Ibekwe Kingsley - Data Scientist</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
