--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
       <section id="intro" class="main style1 dark fullscreen">
         <div class="content">
           <header>
-            <h2>Hey there, 
-				I'm kingsley</h2>
+            <h2 style="text-align: start; font-weight: 500;"">Hey there, <br> I'm kingsley</h2>
           </header>
           <p>
             A knowledge driven Data Scientist, Al/ML Engineer, and Python Developer with appropriate expertise and a strong interest in problem solving using Data Science, Machine Learning, Software Development, Research, and Innovation. 
@@ -93,7 +92,7 @@ I have eveloped good analytical skills and documented expertise solving unstruct
     </section>
 
 	<!-- Three -->
-	<div id="two-bg">
+	<div id="three-bg">
 		<section id="Three" class="main style2 left dark fullscreen">
 			 <div class="content box style2">
 			   <header>
@@ -131,6 +130,11 @@ I have eveloped good analytical skills and documented expertise solving unstruct
             <a href="images/fulls/01.jpg" class="image fit"
               ><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt=""
             /></a>
+<!-- link -->
+            <!-- To add a clickable link Make sure it follows this format below, also ensure that the link has "http:// or https://, else it wont be clickable. Target is to allow it open in a new tab instead of loading on the current tab." -->
+            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
+
+<!-- link -->
           </article>
           <article class="from-right">
             <a href="images/fulls/02.jpg" class="image fit"
