--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ I have eveloped good analytical skills and documented expertise solving unstruct
           <h2>My Skillset</h2>
         </header>
         <p>
-			Skillset Summary 🏋🛠
+			Skillset Summary 🏋🛠 <br>
 			•	Machine Learning, Natural Language Processing, Deep learning
 			•	Language: Python, Html 
 			•	Frameworks: Tensorflow, scikit-learn, FastApi
@@ -93,18 +93,18 @@ I have eveloped good analytical skills and documented expertise solving unstruct
 
 	<!-- Three -->
 	<div id="three-bg">
-		<section id="Three" class="main style2 left dark fullscreen">
+		<section id="Three" class="main style2 right dark fullscreen">
 			 <div class="content box style2">
 			   <header>
 				 <h2>Professional Experience</h2>
 			   </header>
 			   <p>
 				 
-•	Intern – EdgeSight Labs August 2022 – Present
-  •  Virtual experience British Airways Ferbuary 2023
-•	AWS Community Builder 2022
-•	Lead Data Scientist Network UNN 2022 – Present
-•	Intern – Hamoye Internship  2020
+•	Intern – EdgeSight Labs August 2022 – Present<br>
+  •  Virtual experience British Airways Ferbuary 2023<br>
+•	AWS Community Builder 2022<br>
+•	Lead Data Scientist Network UNN 2022 – Present<br>
+•	Intern – Hamoye Internship  2020<br>
 
 			 </p>
 			 </div>
@@ -132,24 +132,30 @@ I have eveloped good analytical skills and documented expertise solving unstruct
             /></a>
 <!-- link -->
             <!-- To add a clickable link Make sure it follows this format below, also ensure that the link has "http:// or https://, else it wont be clickable. Target is to allow it open in a new tab instead of loading on the current tab." -->
-            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
+            <a href='https://google.com' target="_blank" data-poptrox="ignore"><h1>View more</h1></a>
 
 <!-- link -->
           </article>
           <article class="from-right">
             <a href="images/fulls/02.jpg" class="image fit"
-              ><img src="images/thumbs/02.jpg" title="Airchitecture II" alt=""
+              ><img src="images/thumbs/02.jpg" title="Airchitecture II" alt=""  
             /></a>
+            <p>
+              Testing
+            </p>
+            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
           </article>
           <article class="from-left">
             <a href="images/fulls/03.jpg" class="image fit"
               ><img src="images/thumbs/03.jpg" title="Air Lounge" alt=""
             /></a>
+            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
           </article>
           <article class="from-right">
             <a href="images/fulls/04.jpg" class="image fit"
               ><img src="images/thumbs/04.jpg" title="Carry on" alt=""
             /></a>
+            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
           </article>
           <article class="from-left">
             <a href="images/fulls/05.jpg" class="image fit"
@@ -158,11 +164,13 @@ I have eveloped good analytical skills and documented expertise solving unstruct
                 title="The sparkling shell"
                 alt=""
             /></a>
+            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
           </article>
           <article class="from-right">
             <a href="images/fulls/06.jpg" class="image fit"
               ><img src="images/thumbs/06.jpg" title="Bent IX" alt=""
             /></a>
+            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
           </article>
         </div>
       </div>
@@ -172,10 +180,9 @@ I have eveloped good analytical skills and documented expertise solving unstruct
     <section id="contact" class="main style3 secondary">
       <div class="content">
         <header>
-          <h2>Say Hello.</h2>
+          <h2>Let's start a Conversation.</h2>
           <p>
-            Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-            condimentum.
+            
           </p>
         </header>
         <div class="box">
