--- a/index.html
+++ b/index.html
@@ -127,13 +127,19 @@ I have eveloped good analytical skills and documented expertise solving unstruct
         <!-- Gallery  -->
         <div class="gallery">
           <article class="from-left">
-            <a href="images/fulls/01.jpg" class="image fit"
+            <a href="./images/" class="image fit"
               ><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt=""
             /></a>
 <!-- link -->
             <!-- To add a clickable link Make sure it follows this format below, also ensure that the link has "http:// or https://, else it wont be clickable. Target is to allow it open in a new tab instead of loading on the current tab." -->
-            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
 
+            <!-- Description -->
+            <div class="content">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt odit sit, exercitationem consequuntur officia unde? Suscipit explicabo excepturi culpa assumenda repellat veritatis dolore blanditiis vero, eveniet consequatur ab temporibus voluptatum!</p>
+            </div>
+            <!-- Description -->
+
+            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
 <!-- link -->
           </article>
           <article class="from-right">
@@ -178,27 +184,15 @@ I have eveloped good analytical skills and documented expertise solving unstruct
             condimentum.
           </p>
         </header>
-        <div class="box">
-          <form method="post" action="#">
-            <div class="fields">
-              <div class="field half">
-                <input type="text" name="name" placeholder="Name" />
-              </div>
-              <div class="field half">
-                <input type="email" name="email" placeholder="Email" />
-              </div>
-              <div class="field">
-                <textarea
-                  name="message"
-                  placeholder="Message"
-                  rows="6"
-                ></textarea>
-              </div>
-            </div>
+         <div class="box-message">
+      
             <ul class="actions special">
-              <li><input type="submit" value="Send Message" /></li>
+              <li><a href="mailto:dennisdon678@gmail.com"><button>Send An Email</button></a></li>
             </ul>
-          </form>
+            <p>OR</p>
+            <ul class="actions special">
+              <li><a href="mailto:dennisdon678@gmail.com"><button>Send a WhatsApp Message</button></a></li>
+            </ul>
         </div>
       </div>
     </section>
