--- a/index.html
+++ b/index.html
@@ -126,47 +126,87 @@ I have eveloped good analytical skills and documented expertise solving unstruct
 
         <!-- Gallery  -->
         <div class="gallery">
+
+<!-- start product one -->
           <article class="from-left">
-            <a href="./images/" class="image fit"
-              ><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt=""
+            <a href="./my_images/project 1.jpeg" class="image fit"
+              ><img src="./my_images/project 1.jpeg" title="The Anonymous Red" alt=""
             /></a>
 <!-- link -->
             <!-- To add a clickable link Make sure it follows this format below, also ensure that the link has "http:// or https://, else it wont be clickable. Target is to allow it open in a new tab instead of loading on the current tab." -->
 
             <a href='https://google.com' target="_blank" data-poptrox="ignore"><h1>View more</h1></a>
 
+            <!-- Description -->
+            <div class="content">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt odit sit, exercitationem consequuntur officia unde? Suscipit explicabo excepturi culpa assumenda repellat veritatis dolore blanditiis vero, eveniet consequatur ab temporibus voluptatum!</p>
+            </div>
+            <!-- Description -->
+<!-- link -->
+          </article>
+
+<!-- end product one -->
+
+
+<!-- start product two -->
+
+          <article class="from-right">
+            <a href="./my_images/project 2.jpg" class="image fit"
+              ><img src="./my_images/project 2.jpg" title="The Anonymous Red" alt=""
+            /></a>
+<!-- link -->
+            <!-- To add a clickable link Make sure it follows this format below, also ensure that the link has "http:// or https://, else it wont be clickable. Target is to allow it open in a new tab instead of loading on the current tab." -->
+
+            <a href='https://google.com' target="_blank" data-poptrox="ignore"><h1>View more</h1></a>
 
             <!-- Description -->
             <div class="content">
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt odit sit, exercitationem consequuntur officia unde? Suscipit explicabo excepturi culpa assumenda repellat veritatis dolore blanditiis vero, eveniet consequatur ab temporibus voluptatum!</p>
             </div>
             <!-- Description -->
-
-            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
 <!-- link -->
           </article>
-          <article class="from-right">
-            <a href="images/fulls/02.jpg" class="image fit"
-              ><img src="images/thumbs/02.jpg" title="Airchitecture II" alt=""  
-            /></a>
-            <p>
-              Testing
-            </p>
-            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
-          </article>
+
+<!-- end product two -->
+
+<!-- start product three -->
           <article class="from-left">
-            <a href="images/fulls/03.jpg" class="image fit"
-              ><img src="images/thumbs/03.jpg" title="Air Lounge" alt=""
+             <a href="./my_images/project 3.jpeg" class="image fit"
+              ><img src="./my_images/project 3.jpeg" title="The Anonymous Red" alt=""
             /></a>
-            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
+<!-- link -->
+            <!-- To add a clickable link Make sure it follows this format below, also ensure that the link has "http:// or https://, else it wont be clickable. Target is to allow it open in a new tab instead of loading on the current tab." -->
+
+            <a href='https://google.com' target="_blank" data-poptrox="ignore"><h1>View more</h1></a>
+
+            <!-- Description -->
+            <div class="content">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt odit sit, exercitationem consequuntur officia unde? Suscipit explicabo excepturi culpa assumenda repellat veritatis dolore blanditiis vero, eveniet consequatur ab temporibus voluptatum!</p>
+            </div>
+            <!-- Description -->
+<!-- link -->
           </article>
-          <article class="from-right">
-            <a href="images/fulls/04.jpg" class="image fit"
-              ><img src="images/thumbs/04.jpg" title="Carry on" alt=""
+<!-- end product three -->
+
+
+<!-- start product four -->
+          <article class="from-left">
+             <a href="./my_images/project 4.png" class="image fit"
+              ><img src="./my_images/project 4.png" title="The Anonymous Red" alt=""
             /></a>
-            <a href='https://google.com' target="_blank" data-poptrox="ignore">Google</a>
+<!-- link -->
+            <!-- To add a clickable link Make sure it follows this format below, also ensure that the link has "http:// or https://, else it wont be clickable. Target is to allow it open in a new tab instead of loading on the current tab." -->
+
+            <a href='https://google.com' target="_blank" data-poptrox="ignore"><h1>View more</h1></a>
+
+            <!-- Description -->
+            <div class="content">
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt odit sit, exercitationem consequuntur officia unde? Suscipit explicabo excepturi culpa assumenda repellat veritatis dolore blanditiis vero, eveniet consequatur ab temporibus voluptatum!</p>
+            </div>
+            <!-- Description -->
+<!-- link -->
           </article>
-          
+<!-- end product four -->
          
         </div>
       </div>
