--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <h2>Projects</h2>
           <p>
             Here is a list of some of the projects I have worked on
-            you can click on the images to get a full detail about the project.
+            Feel free to reach out to me for contribution or consultation.
           </p>
         </header>
         <ul class="cards">
@@ -199,11 +199,11 @@
         <div class="box-message">
 
           <ul class="actions special">
-            <li><a href="mailto:dennisdon678@gmail.com"><button>Send An Email</button></a></li>
+            <li><a href="mailto:ibekwekingsley2000@gmail.com"><button>Send An Email</button></a></li>
           </ul>
           <p>OR</p>
           <ul class="actions special">
-            <li><a href="mailto:dennisdon678@gmail.com"><button>Send a WhatsApp Message</button></a></li>
+            <li><a href="https://wa.link/nd0qk2"><button>Send a WhatsApp Message</button></a></li>
           </ul>
         </div>
       </div>
@@ -220,7 +220,7 @@
           <a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
         </li>
         <li>
-          <a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+          <a href="#" class="icon brands fa-github"><span class="label">Instagram</span></a>
         </li>
         <li>
           <a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
