--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                   <img src="./my_images/project 1.jpeg">
                 </div>
                 <div class="card_content">
-                  <h2 class="card_title">Project Title</h2>
-                  <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat quibusdam sequi dolore sed, beatae nobis eius atque iste cumque rem aperiam sunt, at harum? Voluptates ullam soluta inventore ad aliquam!</p>
-                 <a href=""> <button class="btn card_btn">Read More</button></a>
+                  <h2 class="card_title">Detecting Emotions of Tweets about upcoming Nigeria Election using Natural Language Processing</h2>
+                  <p class="card_text">In this project I applied NLP to detect emotion behind the tweets made by people about 2023 Nigeria Election</p>
+                 <a href="https://medium.com/machine-learning-mastery/detecting-emotions-of-tweets-about-upcoming-nigeria-election-using-natural-language-processing-f126082e566a"> <button class="btn card_btn">Read More</button></a>
                 </div>
               </div>
             </li>
@@ -147,9 +147,11 @@
                   <img src="./my_images/project 2.jpg">
                 </div>
                 <div class="card_content">
-                  <h2 class="card_title">Project Title</h2>
-                  <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat quibusdam sequi dolore sed, beatae nobis eius atque iste cumque rem aperiam sunt, at harum? Voluptates ullam soluta inventore ad aliquam!</p>
-                 <a href=""> <button class="btn card_btn">Read More</button></a>
+                  <h2 class="card_title">Sentiment Analysis and Topic Modeling of Tweets on UKraineRussia War</h2>
+                  <p class="card_text">In this project I scraped over 50000 tweets and applied topic modeling and sentiment analysis to understand better the intent and opinion of people about 
+                    the Ukraine Russia war
+                  </p>
+                 <a href="https://medium.com/machine-learning-mastery/sentiment-analysis-and-topic-modeling-of-tweets-on-ukrainerussia-war-e20a1dbca263"> <button class="btn card_btn">Read More</button></a>
                 </div>
               </div>
             </li>
@@ -161,9 +163,9 @@
                   <img src="./my_images/project 3.jpeg">
                 </div>
                 <div class="card_content">
-                  <h2 class="card_title">Project Title</h2>
-                  <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat quibusdam sequi dolore sed, beatae nobis eius atque iste cumque rem aperiam sunt, at harum? Voluptates ullam soluta inventore ad aliquam!</p>
-                 <a href=""> <button class="btn card_btn">Read More</button></a>
+                  <h2 class="card_title">Twitter Scraping bot</h2>
+                  <p class="card_text">In this project I built a twitter Scraping bot to scrape data from twitter freely</p>
+                 <a href="https://medium.com/machine-learning-mastery/how-to-scrape-millions-of-tweets-using-snscraper-aa47cee400ec"> <button class="btn card_btn">Read More</button></a>
                 </div>
               </div>
             </li>
@@ -175,8 +177,8 @@
                   <img src="./my_images/project 4.png">
                 </div>
                 <div class="card_content">
-                   <h2 class="card_title">Project Title</h2>
-                  <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat quibusdam sequi dolore sed, beatae nobis eius atque iste cumque rem aperiam sunt, at harum? Voluptates ullam soluta inventore ad aliquam!</p>
+                   <h2 class="card_title">Cat vs Dog Classification</h2>
+                  <p class="card_text"> In this project I used fast api to build a classificatioin model to detect whether an image is a dog or cat.</p>
                  <a href=""> <button class="btn card_btn">Read More</button></a>
                 </div>
               </div>
