--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="card_content">
                   <h2 class="card_title">Project Title</h2>
                   <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat quibusdam sequi dolore sed, beatae nobis eius atque iste cumque rem aperiam sunt, at harum? Voluptates ullam soluta inventore ad aliquam!</p>
-                 <a href=""> <button class="btn card_btn">Read More</button></a>
+                 <a href="https://google.com" data-poptrox="ignore"> <button class="btn card_btn">Read More</button></a>
                 </div>
               </div>
             </li>
@@ -149,7 +149,7 @@
                 <div class="card_content">
                   <h2 class="card_title">Project Title</h2>
                   <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat quibusdam sequi dolore sed, beatae nobis eius atque iste cumque rem aperiam sunt, at harum? Voluptates ullam soluta inventore ad aliquam!</p>
-                 <a href=""> <button class="btn card_btn">Read More</button></a>
+                  <a href="https://google.com" data-poptrox="ignore"> <button class="btn card_btn">Read More</button></a>
                 </div>
               </div>
             </li>
@@ -163,7 +163,7 @@
                 <div class="card_content">
                   <h2 class="card_title">Project Title</h2>
                   <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat quibusdam sequi dolore sed, beatae nobis eius atque iste cumque rem aperiam sunt, at harum? Voluptates ullam soluta inventore ad aliquam!</p>
-                 <a href=""> <button class="btn card_btn">Read More</button></a>
+                 <a href="https://google.com" data-poptrox="ignore"> <button class="btn card_btn">Read More</button></a>
                 </div>
               </div>
             </li>
@@ -177,7 +177,7 @@
                 <div class="card_content">
                    <h2 class="card_title">Project Title</h2>
                   <p class="card_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat quibusdam sequi dolore sed, beatae nobis eius atque iste cumque rem aperiam sunt, at harum? Voluptates ullam soluta inventore ad aliquam!</p>
-                 <a href=""> <button class="btn card_btn">Read More</button></a>
+                 <a href="https://google.com" data-poptrox="ignore"> <button class="btn card_btn">Read More</button></a>
                 </div>
               </div>
             </li>
@@ -203,7 +203,7 @@
           </ul>
           <p>OR</p>
           <ul class="actions special">
-            <li><a href="https://wa.link/nd0qk2"><button>Send a WhatsApp Message</button></a></li>
+            <li><a href="https://wa.link/nd0qk2" target="_blank"><button>Send a WhatsApp Message</button></a></li>
           </ul>
         </div>
       </div>
