--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="card_content">
                    <h2 class="card_title">Cat vs Dog Classification</h2>
                   <p class="card_text"> In this project I used fast api to build a classificatioin model to detect whether an image is a dog or cat.</p>
-                 <a href=""> <button class="btn card_btn">Read More</button></a>
+                 <a href="https://github.com/Smartking1/Cat-vs-Dog-Classifier"> <button class="btn card_btn">Read More</button></a>
                 </div>
               </div>
             </li>
@@ -222,17 +222,16 @@
           <a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
         </li>
         <li>
-          <a href="#" class="icon brands fa-github"><span class="label">Instagram</span></a>
+          <a href="#" class="icon brands fa-github"><span class="label">Github</span></a>
         </li>
         <li>
           <a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
         </li>
         <li>
-          <a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a>
+          <a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a>
         </li>
-        <li>
-          <a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a>
-        </li>
+        
+          
       </ul>
 
       <!-- Menu -->
