--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
       <!-- Menu -->
       <ul class="menu">
-        <li>&copy; Untitled</li>
+        <li>&copy;</li>
         <li>Design: <a href="https://www.linkedin.com/in/ibekwe-kingsley-ba0b0516a">Ibekwe Kingsley</a></li>
       </ul>
     </footer>
