--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <a href="https://www.linkedin.com/in/ibekwe-kingsley-ba0b0516a" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
         </li>
         <li>
-          <a href=" https://link.medium.com/TDL2Iv8xOnb" class="icon brands fa-medium"><span class="label">Medium</span></a>
+          <a href=" https://medium.com/machine-learning-mastery" class="icon brands fa-medium"><span class="label">Medium</span></a>
         </li>
         
           
