--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>
           I am Passionate in using data, machine learning, deep learning, and natural language processing approaches to
           tackle difficult business challenges.
-          I have eveloped good analytical skills and documented expertise solving unstructured challenges.
+          I have developed good analytical skills and documented expertise solving unstructured challenges.
 
       </div>
       <a href="#two" class="button style2 down anchored">Next</a>
