--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
           </header>
           <p>
 
-            • Open Source Contributor at Omdena Jun. 2023 - Present<br>
-            • Data Science Intern at Wiretooth Technologies May 2023 - Jul. 2023<br>
+            • AI/ML Open Source Contributor at Omdena Jun. 2020 - Present<br>
+            • Data Science Intern at Wiretooth Technologies May 2023 - Sep. 2023<br>
+            • Corisio Sep. 2023 - Present<br>
             • Virtual experience program at British Airways Jan. 2023 - Feb. 2023 <br>
             • AWS Community Builder 2022<br>
             • Lead Data Scientist Network UNN 2022 – Present<br>
@@ -133,9 +134,9 @@
                 </div>
                 <div class="card_content">
 
-                  <h2 class="card_title">Detecting Emotions of Tweets about upcoming Nigeria Election using Natural Language Processing</h2>
-                  <p class="card_text">In this project I applied NLP to detect emotion behind the tweets made by people about 2023 Nigeria Election</p>
-                 <a href="https://medium.com/machine-learning-mastery/detecting-emotions-of-tweets-about-upcoming-nigeria-election-using-natural-language-processing-f126082e566a" data-poptrox="ignore" target="_blank"> <button class="btn card_btn">Read More</button></a>
+                  <h2 class="card_title">AI Powered Educational Chatbot</h2>
+                  <p class="card_text">An AI conversational chatbot that helps you in your personal study and research. Upload a PDF file and the bot allows you to query the PDF and get answers tailored to your question</p>
+                 <a href="https://github.com/Smartking1/edubot-v2" data-poptrox="ignore" target="_blank"> <button class="btn card_btn">Read More</button></a>
 
                 </div>
               </div>
@@ -167,8 +168,8 @@
                 </div>
                 <div class="card_content">
 
-                  <h2 class="card_title">Twitter Scraping bot</h2>
-                  <p class="card_text">In this project I built a twitter Scraping bot to scrape data from twitter freely</p>
+                  <h2 class="card_title">AI Powered CV Ranker & Summarizer</h2>
+                  <p class="card_text">This project is a resume ranking and summarization system that evaluates resumes based on a job description, providing a ranking score, category, and concise summary. It leverages semantic similarity for ranking and generates resume summaries.</p>
                  <a href="https://medium.com/machine-learning-mastery/how-to-scrape-millions-of-tweets-using-snscraper-aa47cee400ec" data-poptrox="ignore" target="_blank"> <button class="btn card_btn">Read More</button></a>
 
                 </div>
