--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <li class="cards_item" data-aos="fade-up" data-aos-duration="1000">
               <div class="card">
                 <div class="card_image">
-                  <img src="./my_images/project 1.jpeg">
+                  <img src="./my_images/EduBot.jpeg">
                 </div>
                 <div class="card_content">
 
@@ -164,7 +164,7 @@
             <li class="cards_item" data-aos="fade-up" data-aos-duration="1000">
               <div class="card">
                 <div class="card_image">
-                  <img src="./my_images/project 3.jpeg">
+                  <img src="./my_images/AICV.png">
                 </div>
                 <div class="card_content">
 
