--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             • AI/ML Open Source Contributor at Omdena Jun. 2020 - Present<br>
             • Data Science Intern at Wiretooth Technologies May 2023 - Sep. 2023<br>
-            • Corisio Sep. 2023 - Present<br>
+            • AI/ML at Corisio Sep. 2023 - Present<br>
             • Virtual experience program at British Airways Jan. 2023 - Feb. 2023 <br>
             • AWS Community Builder 2022<br>
             • Lead Data Scientist Network UNN 2022 – Present<br>
