--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="box-message">
 
           <ul class="actions special">
-            <li><a href="mailto:ibekwekingsley2000@gmail.com"><button>Send An Email</button></a></li>
+            <li><a href="mailto:kingsleyibekwe.c@gmail.com"><button>Send An Email</button></a></li>
           </ul>
           <p>OR</p>
           <ul class="actions special">
