updated index.html with recent experience and projects

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         </header>
         <p>
           Skillset Summary 🏋🛠 <br>
-          • Machine Learning, Natural Language Processing, Deep learning
+          • Machine Learning, Natural Language Processing, Deep learning, AI Engineering
           • Language: Python, Html
           • Frameworks: Langchain, CrewAI, Cohere, LlamaIndex, Langserve, Tensorflow, scikit-learn, FastApi
-          • Platforms: AWS, BigML, Linux
+          • Platforms: AWS, GCP, Azure
           • Data Scraping, Web Scraping, Sentiment Analysis
           • Technical Writing
           • Softskills: Team Management, Leadership, Time management.
@@ -99,10 +99,11 @@
           </header>
           <p>
 
-            • AI/ML Open Source Contributor at Omdena Jun. 2020 - Present<br>
-            • Data Science Intern at Wiretooth Technologies May 2023 - Sep. 2023<br>
-            • AI/ML at Corisio Sep. 2023 - Present<br>
+            • AI/ML Engineer at Corisio Sept. 2023 - Present<br>
+            • AI Engineer(contract) at Quantum Side Technologies Nov. 2024 - Apr. 2025<br>
+            • Data Science Intern at Wiretooth Technologies Mar. 2023 - Sep. 2023<br>
             • Virtual experience program at British Airways Jan. 2023 - Feb. 2023 <br>
+            • Open Source Contributor at Omdena Jun. 2020 - Present <br>
             • AWS Community Builder 2022<br>
             • Lead Data Scientist Network UNN 2022 – Present<br>
             • Intern – Hamoye Internship 2020<br>
@@ -146,15 +147,14 @@
             <li class="cards_item" data-aos="fade-up" data-aos-duration="1000">
               <div class="card">
                 <div class="card_image">
-                  <img src="./my_images/project 2.jpg">
+                  <img src="./my_images/resume.PNG">
                 </div>
                 <div class="card_content">
 
-                  <h2 class="card_title">Sentiment Analysis and Topic Modeling of Tweets on UKraineRussia War</h2>
-                  <p class="card_text">In this project I scraped over 50000 tweets and applied topic modeling and sentiment analysis to understand better the intent and opinion of people about 
-                    the Ukraine Russia war
+                  <h2 class="card_title">AI Resume Builder</h2>
+                  <p class="card_text">In this project I built an AI powered resume builder that helps users to create a professional resume in minutes. The tool uses AI to generate a resume based on the user's input and preferences.
                   </p>
-                 <a href="https://medium.com/machine-learning-mastery/sentiment-analysis-and-topic-modeling-of-tweets-on-ukrainerussia-war-e20a1dbca263" data-poptrox="ignore" target="_blank"> <button class="btn card_btn">Read More</button></a>
+                 <a href="https://github.com/Smartking1/AI-Resume-Builder" data-poptrox="ignore" target="_blank"> <button class="btn card_btn">Read More</button></a>
 
                 </div>
               </div>
@@ -246,13 +246,13 @@
             <li class="cards_item" data-aos="fade-up" data-aos-duration="1000">
               <div class="card">
                 <div class="card_image">
-                  <img src="./my_images/project 8.png">
+                  <img src="./my_images/translation.PNG">
                 </div>
                 <div class="card_content">
 
-                   <h2 class="card_title">Cat vs Dog Classification</h2>
-                  <p class="card_text"> In this project I used fast api to build a classificatioin model to detect whether an image is a dog or cat.</p>
-                 <a href="https://github.com/Smartking1/Cat-vs-Dog-Classifier" data-poptrox="ignore" target="_blank"> <button class="btn card_btn">Read More</button></a>
+                   <h2 class="card_title">Realtime AI Health translation and transcription system</h2>
+                  <p class="card_text"> In this project I built a realtme AI Powered health translation and transcription system for seamless interaction of health professionals or patients with language differences.</p>
+                 <a href="https://github.com/Smartking1/health_translation_app" data-poptrox="ignore" target="_blank"> <button class="btn card_btn">Read More</button></a>
 
                 </div>
               </div>
